# oculus_gazebo_navigator

./: .project  CMakeLists.txt  README.md  package.xml
config/: gui.ini  oculus_config.yaml
controllers/: oculus_keyboard_teleop.cpp
include/: oculus_ps3_teleop_plugin.h
launch/: empty_world.launch  example_oculus_keyboard.launch  example_oculus_ps3.launch  hospital_youbot.launch  oculus_hospital_navigator.launch  oculus_nav_keyboard_op.launch  oculus_nav_ps3_op.launch  oculus_navigator.launch
lib/: liboculus_plugin.dylib  libps3_oculus_teleop.dylib
models/: camera.sdf  camera_keyboard_teleop.sdf  camera_ps3_teleop.sdf  sun.sdf
plugins/: oculus_keyboard_teleop_plugin.cc  oculus_ps3_teleop_plugin.cc  ps3_teleop_plugin.cc  ps3_teleop_plugin.h
scripts/: DylibSoftlinks.sh
src/controllers/: oculus_keyboard_teleop.cpp
src/plugins/: oculus_keyboard_teleop_plugin.cc  oculus_ps3_teleop_plugin.cc
worlds/: empty.world
