<?xml version="1.0"?>
<package>
  <name>oculus_gazebo_navigator</name>
  <version>0.0.0</version>
  <description>Virtual camera navigator for Gazebo simulation</description>

  <maintainer email="mohit.appi@gmail.com">Mohit Sridhar</maintainer>
  <maintainer email="ltw_david@hotmail.com">David Lee</maintainer>
  
  <license>MIT</license>

  <url type="website">https://github.com/MohitShridhar/oculus_gazebo_navigator</url>

  <buildtool_depend>catkin</buildtool_depend>
  <build_depend>gazebo_plugins</build_depend>
  <build_depend>gazebo_ros</build_depend>
  <build_depend>gazebo_ros</build_depend>
  <build_depend>geometry_msgs</build_depend>
  <build_depend>sensor_msgs</build_depend>
  <build_depend>nodelet</build_depend>
  <build_depend>roscpp</build_depend>
  <build_depend>rospy</build_depend>
  <build_depend>std_msgs</build_depend>
  <build_depend>tf</build_depend>

  <run_depend>gazebo_plugins</run_depend>
  <run_depend>gazebo_ros</run_depend>
  <run_depend>geometry_msgs</run_depend>
  <run_depend>sensor_msgs</run_depend>
  <run_depend>nodelet</run_depend>
  <run_depend>roscpp</run_depend>
  <run_depend>rospy</run_depend>
  <run_depend>std_msgs</run_depend>
  <run_depend>tf</run_depend>

  <export>
    <gazebo_ros plugin_path="${prefix}/lib/" />
    <gazebo_ros gazebo_media_path="${prefix}/models/"/>
  </export>

</package>